[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/main/editor/spritechanneler/sprite-channeler.gd" type="Script" id=1]

[node name="SpriteChanneler" type="Node"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="UI/CenterContainer"]
margin_left = 112.0
margin_top = 100.0
margin_right = 912.0
margin_bottom = 500.0
rect_min_size = Vector2( 800, 400 )

[node name="MarginContainer" type="MarginContainer" parent="UI/CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 793.0
margin_bottom = 393.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer/PanelContainer/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 771.0
margin_bottom = 371.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 756.0
margin_bottom = 14.0
text = "Sprite Channeler"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 756.0
margin_bottom = 356.0
size_flags_vertical = 3
custom_constants/separation = 15

[node name="TextEdit" type="TextEdit" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 370.0
margin_bottom = 327.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "fsdfds"
readonly = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 385.0
margin_right = 756.0
margin_bottom = 327.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 371.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 79.0
margin_bottom = 14.0
text = "Source path:"

[node name="LabelSrcPath" type="Label" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 83.0
margin_right = 371.0
margin_bottom = 14.0
size_flags_horizontal = 3
align = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 371.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 75.0
margin_bottom = 14.0
text = "Target path:"

[node name="LabelDstPath" type="Label" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 79.0
margin_right = 371.0
margin_bottom = 14.0
size_flags_horizontal = 3
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 371.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 122.0
margin_bottom = 14.0
text = "Number of images:"

[node name="LabelNumImages" type="Label" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 126.0
margin_right = 371.0
margin_bottom = 14.0
size_flags_horizontal = 3
align = 2

[node name="Spacer" type="Control" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 371.0
margin_bottom = 247.0
size_flags_vertical = 3

[node name="Button" type="Button" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 257.0
margin_right = 371.0
margin_bottom = 287.0
rect_min_size = Vector2( 0, 30 )
text = "Create Channeled Sprites"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 297.0
margin_right = 371.0
margin_bottom = 327.0
rect_min_size = Vector2( 0, 30 )

[connection signal="pressed" from="UI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
